:art: Feat(News): Change filter by topic and add query search in get all news
